--- a/style.css
+++ b/style.css
@@ -65,6 +65,14 @@ body {
 .portfolio a:active {
   color: inherit;
 }
+.portfolio .card a {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  height: 100%;
+  color: inherit;
+  text-decoration: none;
+}
 
 /* =================== بزرگ و کوچک شدن عکس پروفایل =================== */
 /* #portfolio {
@@ -1230,3 +1238,4 @@ footer a {
   display: block;
 
 }
+
